@@ -22,15 +22,15 @@
 #
 AC_PREREQ([2.60])
 LT_PREREQ([2.4.0])
-AC_INIT([libmicrohttpd],[0.9.42],[libmicrohttpd@gnu.org])
+AC_INIT([libmicrohttpd],[0.9.43],[libmicrohttpd@gnu.org])
 AM_INIT_AUTOMAKE([silent-rules] [subdir-objects])
 AC_CONFIG_HEADERS([MHD_config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AH_TOP([#define _GNU_SOURCE  1])
 
-LIB_VERSION_CURRENT=42
+LIB_VERSION_CURRENT=43
 LIB_VERSION_REVISION=0
-LIB_VERSION_AGE=32
+LIB_VERSION_AGE=33
 AC_SUBST(LIB_VERSION_CURRENT)
 AC_SUBST(LIB_VERSION_REVISION)
 AC_SUBST(LIB_VERSION_AGE)
@@ -485,7 +485,7 @@ AC_LINK_IFELSE(
     [[
       #include <mach/clock.h>
       #include <mach/mach.h>
-    ]], 
+    ]],
     [[
       clock_serv_t cs;
       mach_timespec_t mt;
